test-package-compiler/src/snapshots/test_package_compiler__generated_tests__opaque_type_destructure.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/opaque_type_destructure"
---
error: Unknown module value
  ┌─ src/two.gleam:7:7
  │
7 │   let one.User(name: name, score: score) = user
  │       ^

The module `one` does not have a `User` value.

error: Unknown variable
  ┌─ src/two.gleam:8:5
  │
8 │   #(name, score)
  │     ^

The name `name` is not in scope here.

error: Unknown variable
  ┌─ src/two.gleam:8:11
  │
8 │   #(name, score)
  │           ^

The name `score` is not in scope here.
